Rebasing with upstream changes

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -38,7 +38,7 @@
   <string name="search_result_name">検索: <xliff:g id="terms">%1$s</xliff:g></string>
   <string name="loading_message">読み込み中\u2026</string>
   <string name="cancelled_message">キャンセルしました。</string>
-  <string name="error_message">エラー。</string>
+  <string name="error_message">エラーが発生しました。</string>
   <string name="copy_text_cd">タップしてテキストをクリップボードにコピー</string>
   <string name="copy_text_msg">テキストをクリップボードにコピーしました</string>
   <string name="warning_title">警告</string>
@@ -310,7 +310,7 @@
   <string name="pref_display_thumbs">プレビュー</string>
   <string name="pref_display_thumbs_summary">アプリ、音楽ファイル、写真、動画のプレビュー画像を表示する</string>
   <string name="pref_use_flinger">スワイプジェスチャーを使用</string>
-  <string name="pref_use_flinger_summary">ファイルまたはフォルダの削除に、左から右へのジェスチャーの検出を使用する</string>
+  <string name="pref_use_flinger_summary">ファイルまたはフォルダの削除に左から右へのジェスチャーの検出を使用する</string>
   <string name="pref_general_advanced_settings_category">詳細設定</string>
   <string name="pref_access_mode">アクセスモード</string>
   <string name="pref_access_mode_safe">セーフモード</string>
