--- a/res/values-eu-rES/strings.xml
+++ b/res/values-eu-rES/strings.xml
@@ -26,7 +26,7 @@
   <string name="device_blockdevice">Bloke gailua</string>
   <string name="device_characterdevice">Karaktere gailua</string>
   <string name="device_namedpipe">Hodi izendatua</string>
-  <string name="device_domainsocket">Domeinuaren socket-a</string>
+  <string name="device_domainsocket">Domeinuaren socketa</string>
   <string name="mount_point_readonly">RO</string>
   <string name="mount_point_readwrite">RW</string>
   <string name="yes">Bai</string>
@@ -60,7 +60,7 @@
   <string name="msgs_file_not_found">Fitxategi edo karpeta ez da existitzen.</string>
   <string name="msgs_command_not_found">Eragiketa burutzeko komandoa ez da aurkitu edo definizio okerra du.</string>
   <string name="msgs_io_failed">Irakurtze/idazte akatsa.</string>
-  <string name="msgs_operation_timeout">Eragiketaren denbora muga gainditu da.</string>
+  <string name="msgs_operation_timeout">Eragiketaren denbora-muga gainditu da.</string>
   <string name="msgs_operation_failure">Eragiketak huts egin du.</string>
   <string name="msgs_console_alloc_failure">Barne akats bat egon da.</string>
   <string name="msgs_operation_can_not_be_cancelled">Eragiketa ezin da eten.</string>
@@ -231,7 +231,7 @@
   <string name="actions_menu_compress">Konprimitu</string>
   <string name="actions_menu_extract">Erauzi</string>
   <string name="actions_menu_delete">Ezabatu</string>
-  <string name="actions_menu_rename">Berrizendatu</string>
+  <string name="actions_menu_rename">Aldatu izena</string>
   <string name="actions_menu_create_copy">Kopia sortu</string>
   <string name="actions_menu_properties">Xehetasunak</string>
   <string name="actions_menu_add_to_bookmarks">Gehitu laster-marketara</string>
@@ -269,7 +269,7 @@
   <string name="filetime_format_mode_locale">Lurralde ezarpena</string>
   <string name="filetime_format_mode_ddMMyyyy_HHmmss">ee/hh/uuuu hh:mm:ss</string>
   <string name="filetime_format_mode_MMddyyyy_HHmmss">hh/ee/uuuu hh:mm:ss</string>
-  <string name="filetime_format_mode_yyyyMMdd_HHmmss">uuuu-hh-ee hh:mm:ss</string>
+  <string name="filetime_format_mode_yyyyMMdd_HHmmss">uuuu-hh-ee oo:mm:ss</string>
   <string name="selection_folders_and_files"><xliff:g id="folders">%1$s</xliff:g> eta <xliff:g id="files">%2$s</xliff:g> hautatuta.</string>
   <string name="category_system">SISTEMA</string>
   <string name="category_app">APLIKAZIOA</string>
