Updating to latest vers from Cyanogen.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -843,4 +843,6 @@
 
     <string name="activity_not_found_exception">Couldn\'t find an app to open this file</string>
 
+    <string name="storage_permissions_denied">The app cannot run without permission to write to external storage.</string>
+
 </resources>
